--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
+        "@babel/preset-react": "^7.22.5",
         "@symfony/webpack-encore": "^4.0.0",
         "autoprefixer": "^10.4.14",
         "core-js": "^3.23.0",
@@ -26,6 +27,9 @@
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "daisyui": "^3.2.1",
         "tailwindcss": "^3.3.3",
-        "@fortawesome/fontawesome-free": "^6.4.0"
+        "@fortawesome/fontawesome-free": "^6.4.0",
+        "react": "^18.2.0",
+        "react-content-loader": "^6.2.1",
+        "react-dom": "^18.2.0"
     }
 }
