--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     },
     "dependencies": {
         "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "daisyui": "^3.2.1",
-        "tailwindcss": "^3.3.3",
         "@fortawesome/fontawesome-free": "^6.4.0",
+        "daisyui": "^3.2.1",
+        "nuka-carousel": "^6.0.3",
         "react": "^18.2.0",
+        "react-alice-carousel": "^2.7.1",
         "react-content-loader": "^6.2.1",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "tailwindcss": "^3.3.3"
     }
 }
