--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "easycorp/easyadmin-bundle": "^4.7",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.22",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
         "symfony/doctrine-messenger": "6.3.*",
