feat: Formulaire de contact

--- a/.env
+++ b/.env
@@ -38,4 +38,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
+MAILER_DSN=
+MAILER_TO=
+MAILER_FROM=
+MAILER_HEADERS_FROM=
 ###< symfony/mailer ###
+
+
