--- a/.env
+++ b/.env
@@ -37,11 +37,14 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
-MAILER_DSN=
+MAILER_DSN=null://null
 MAILER_TO=
 MAILER_FROM=
 MAILER_HEADERS_FROM=
 ###< symfony/mailer ###
 
-
+###> google/apiclient ###
+GOOGLE_API_KEY=
+GOOGLE_CID=
+GOOGLE_AUTH_CONFIG=%kernel.project_dir%/path/to/file.json
+###< google/apiclient ###
